[gd_scene load_steps=8 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_0"]
[ext_resource type="Script" path="res://Scripts/PlayerController.gd" id="2"]
[ext_resource type="Script" path="res://Scripts/FragmentManager.gd" id="3"]
[ext_resource type="Script" path="res://Scripts/VisualEffects.gd" id="4"]
[ext_resource type="Script" path="res://Scripts/AudioManager.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://ui_scene" path="res://Scenes/UIScene.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://achievement_notification" path="res://Scenes/AchievementNotification.tscn" id="7"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0")

[node name="Player" type="Node2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("2")

[node name="FragmentManager" type="Node" parent="."]
script = ExtResource("3")

[node name="VisualEffects" type="Node" parent="."]
script = ExtResource("4")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("5")

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIScene" parent="UI"]
instance = ExtResource("6")

[node name="AchievementNotification" parent="."]
instance = ExtResource("7")

[node name="BGMPlayer" type="AudioStreamPlayer" parent="AudioManager"]
volume_db = -10.0

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="AudioManager"]
volume_db = -5.0
max_distance = 500.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="VisualEffects"]
emitting = false
amount = 50
lifetime = 1.0
emission_shape = 1
